WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205644
Style invalidation cleanups
https://bugs.webkit.org/show_bug.cgi?id=205644
Summary
Style invalidation cleanups
Antti Koivisto
Reported
2019-12-30 06:30:56 PST
Move invalidation code from Style::Scope to Invalidator.
Attachments
wip
(11.57 KB, patch)
2019-12-30 06:31 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(14.20 KB, patch)
2019-12-30 07:08 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(14.22 KB, patch)
2019-12-30 07:20 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2019-12-30 06:31:18 PST
Created
attachment 386528
[details]
wip
Antti Koivisto
Comment 2
2019-12-30 07:08:41 PST
Created
attachment 386532
[details]
patch
Antti Koivisto
Comment 3
2019-12-30 07:20:00 PST
Created
attachment 386533
[details]
patch
WebKit Commit Bot
Comment 4
2019-12-30 12:17:02 PST
Comment on
attachment 386533
[details]
patch Clearing flags on attachment: 386533 Committed
r253949
: <
https://trac.webkit.org/changeset/253949
>
WebKit Commit Bot
Comment 5
2019-12-30 12:17:03 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-12-30 12:21:55 PST
<
rdar://problem/58245831
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug